# GloVe

./: .gitignore  .travis.yml  README.md  convert.py  download_data.sh  plot_accuracy.py  plot_convergence.py  run_experiments.sh  setup.py
embedding/: __init__.py  __main__.py  embedding.py  evaluate.py  logging_config.py  main.py  parser.py  sample.py  sampling.py  solver.py  tensor_type.py  util.py
embedding/data/eval/rw/: rw.txt
embedding_cpp/: CMakeLists.txt  embedding.cc  solver.cc  solver.cu  solver.h  sparse.h  timer.h  utils.cc  utils.cu  utils.h
embedding_cpp/cmake/: FindMKL.cmake
eval/python/: evaluate.py
snap/: to_bin.py
test/: test_tensor_type_conversion.py
